--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "node-sass": "^4.5.2",
+    "normalize-scss": "^6.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
@@ -11,7 +12,8 @@
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "sass-loader": "^6.0.3"
   },
   "scripts": {
     "build-css": "node-sass src/ -o src/",
@@ -23,5 +25,14 @@
     "eject": "react-scripts eject",
     "lint": "standard",
     "lint-fix": "standard --fix"
+  },
+  "standard": {
+    "parser": "babel-eslint"
+  },
+  "standard": {
+    "parser": "babel-eslint"
+  },
+  "node-sass": {
+    "loader": "sass-loader"
   }
 }
